--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-qunit": "^0.7.0",
-    "grunt-contrib-requirejs": "^0.4.4",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-jsdoc": "^0.6.3",
-    "jsdoc": "^3.3.0-beta3",
-    "phantomjs": "^1.9.16"
+    "babelify": "^6.1.0",
+    "grunt-browserify": "^3.8.0",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
