--- a/package.json
+++ b/package.json
@@ -4,14 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-core/register"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "babel-core": "^6.7.6",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babelify": "^6.1.0",
+    "chai": "^3.5.0",
+    "grunt": "^0.4.5",
     "grunt-browserify": "^3.8.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "jest-cli": "^11.0.0",
+    "mocha": "^2.4.5",
+    "mocha-jsdom": "^1.1.0"
+  },
+  "dependencies": {
+    "invariant": "^2.2.1"
   }
 }
