--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "file-loader": "^0.8.1",
     "gulp-babel": "^6.1.2",
     "gulp-browserify": "^0.5.1",
+    "gulp-jsdoc": "^0.1.5",
     "gulp-livereload": "^3.8.1",
     "gulp-mocha": "^2.2.0",
     "gulp-sass": "^2.2.0",
@@ -44,6 +45,7 @@
     "html-webpack-plugin": "^1.2.0",
     "http-server": "^0.8.0",
     "invariant": "2.1.1",
+    "jsdoc": "^3.4.0",
     "jsdom": "^2.0.0",
     "json-loader": "^0.5.2",
     "jsx-loader": "^0.13.2",
